fix: eliminate false positives and filter test files from structural analysis
Noise reduction (Round 1 + 2):
- DA-SENSITIVE-001: 1,099 → 12 (tightened data_access.toml patterns)
- SEC-SQLI-PARAM-001: 144 → 2 (exclude route definitions via negative match)
- API-PAGINATION-001: 498 → 45 (exclude SQLite pragmas via negative match)
- LOG-PII-001: exclude pattern definition files via negative file_patterns
- Taint flows: 9,417 → 42 (anchored registry matching + receiver prefix propagation)
- Anonymous error gaps: 7,577 → 0 (skip anonymous functions in parser)
- Zone of Pain: 735 → 0 (common prefix stripping in import graph)
- Degradation alerts: 383 → 0 (require score < 0.5 AND violations > 0)
- OWASP: 0 → 42+ findings (rewrote to pull from violations, taint, detections)

Test file filtering:
- Add prod_parse_results/prod_matches filtered views in analysis pipeline
- Filter test/bench/fixture files from 13 subsystems: coupling, wrappers,
  crypto, DNA, secrets, constants, constraints, env vars, decomposition,
  taint, error handling, impact, enforcement
- Keep test files in: parse loop, detections table, call graph, test topology,
  boundary detection, reachability cache
- Expand is_test_or_fixture_file() to cover all 10 languages, test runner
  configs (vitest, jest, pytest, etc.), and additional directory patterns

Test fixes (10):
- Fix E0761 integration test module conflict
- Fix 3 framework loader tests (skip patterns with all-invalid regexes)
- Fix 2 taint stress tests (anchored matching + receiver prefix propagation)
- Fix taint sink coverage label counting
- Fix coupling zone classification for zero-instability modules
- Fix bridge engine SQL column name (created_at → recorded_at)
- Update napi schema version expectation
- Update 3 production_cat22 test assertions

Coupling graph improvements:
- Rewrite file_to_module() with common prefix stripping for absolute paths
- normalize_import_source() returns Option, skips Rust :: paths and bare packages
- Contract trac

--- a/crates/drift/drift-analysis/src/frameworks/packs/api.toml
+++ b/crates/drift/drift-analysis/src/frameworks/packs/api.toml
@@ -11,9 +11,18 @@ sub_type = "pagination"
 confidence = 0.80
 [patterns.match]
 content_patterns = [
-    "(?i)(?:page|offset|limit|cursor|per_page|pageSize|page_size)",
+    # Require co-occurrence of pagination-specific terms with API/query context
+    # or multiple pagination terms on the same line to reduce false positives
+    # from standalone variable names like `limit` or `offset`.
     "(?i)paginate\\s*\\(", "(?i)Paginator\\s*\\(",
-    "(?i)\\?page=|&page=|\\?offset=|&offset=",
+    "(?i)\\?page=|&page=|\\?offset=|&offset=|\\?limit=|&limit=|\\?cursor=|&cursor=",
+    "(?i)(?:page|offset|limit|cursor)\\s*[=:]\\s*(?:page|offset|limit|cursor|per_page|pageSize|page_size|\\d+)\\b",
+    "(?i)(?:per_page|pageSize|page_size|nextCursor|next_cursor|hasMore|has_more|totalPages|total_pages)",
+]
+[patterns.match.not]
+content_patterns = [
+    # Exclude SQLite/database pragma fields (page_count, page_size, freelist_count)
+    "(?i)(?:pragma|page_count|freelist_count|page_size\\s*:\\s*u(?:32|64))",
 ]
 [patterns.learn]
 group_by = "sub_type"
